finalizing on Celtic box. Shifted to fixed SideBar and took up that available M-R spacing

--- a/celtic.css
+++ b/celtic.css
@@ -312,7 +312,7 @@ textarea {
 
 #fullspread {
 
-  margin-top: 20%;
+  margin-top: 5%;
   
 }
 
@@ -320,12 +320,19 @@ textarea {
 
 
 #celticContainer{
+  margin-top: 5%;
   position: fixed;
-
+  height: 100%;
+  width: 400px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
 }
 
 #celticBox{
-  float: left;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -342,3 +349,4 @@ textarea {
   margin: 0;
   padding: 0;
 }
+
